# codex-config

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  TODOS.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.scratch/add-global-skill-symlink/: PRD.md
.scratch/ui-package-manager-style/: PRD.md  qa-harness.html
src/: App.css  App.test.tsx  App.tsx  AppShell.tsx  ClaudeMcpWorkspace.tsx  ClaudeSessionsWorkspace.tsx  ClaudeSkillsWorkspace.tsx  ConfigFieldsWorkspace.tsx  ConfigPreviewSidebar.tsx  ConfigTableEntryEditor.tsx  ConfigTablesWorkspace.tsx  SessionsWorkspace.tsx  SkillsWorkspace.tsx  appState.ts  claudeState.test.ts  claudeState.ts  codexSessions.test.ts  codexSessions.ts  configEditWorkflow.test.ts  configEditWorkflow.ts  configFieldDrafts.test.ts  configFieldDrafts.ts  configTableEntries.test.ts  configTableEntries.ts  globalSkills.test.ts  globalSkills.ts  useConfigEditWorkflow.test.ts  useConfigEditWorkflow.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/schema/: official-config.schema.json  product-schema.json
src-tauri/src/: app_preferences.rs  app_state.rs  backup_store.rs  claude_mcp_store.rs  claude_session_store.rs  claude_skill_store.rs  claude_state.rs  codex_probe.rs  codex_session_store.rs  config_document_workflow.rs  config_locator.rs  config_schema.rs  config_table_entry.rs  effective_config.rs  lib.rs  main.rs  mcp_server_store.rs  model_provider_store.rs  plugin_store.rs  schema_write.rs  skill_store.rs  test_support.rs  toml_store.rs
src/app/: App.css  (+3 more)
(+50 files in other folders)
